--- a/views/flow-form.html.twig
+++ b/views/flow-form.html.twig
@@ -23,7 +23,7 @@
         {{ form_row(flowForm.documentation, {'label' : 'Documentation'}) }}
 
 
-        <input type="submit" name="submit" value="Add !" />
+        <input type="submit" name="submit" value="Save" />
         {{form_end(flowForm)}}
     </form>
 </div>
