--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -20,13 +20,13 @@
         <div class="row">
             <div class="col-md-6">
                 <h4>
-                    <a href="gestionToken">Manage Token</a>
+                    <a href="gestionToken"><img src="{{ app.request.basepath }}/images/manage.png"> Manage Token</a>
                 </h4>
 
             </div>
             <div class="col-md-6">
                 <h4>
-                    <a href="mapping"> Flows / mapping</a>
+                    <a href="mapping"><img src="{{ app.request.basepath }}/images/flows.png"> Flows / mapping</a>
                 </h4>
 
             </div>
@@ -37,13 +37,13 @@
         <div class="row">
             <div class="col-md-6">
                 <h4>
-                    <a href="/">Metrics</a>
+                    <a href="/"><img src="{{ app.request.basepath }}/images/metrics.png"> Metrics</a>
                 </h4>
 
             </div>
             <div class="col-md-6">
                 <h4>
-                    <a href="/">   Documentation</a>
+                    <a href="/"><img src="{{ app.request.basepath }}/images/documentation.png"> Documentation</a>
                 </h4>
 
             </div>
@@ -64,7 +64,7 @@
         <div class="row">
             <div class="col-md-4">
                 <h4>
-                    ExactTarget                            </a>
+                    <img src="{{ app.request.basepath }}/images/exactarget_logo.jpg"> ExactTarget
                 </h4>
 
             </div>
@@ -119,7 +119,7 @@
         <div class="row">
             <div class="col-md-4">
                 <h4>
-                   Salesforce
+                    <img src="{{ app.request.basepath }}/images/salesforce_logo.jpg"> Salesforce
                 </h4>
 
             </div>
@@ -134,7 +134,7 @@
         <div class="row">
             <div class="col-md-4">
                 <h4>
-                    Treasure Data
+                    <img src="{{ app.request.basepath }}/images/treasureData_logo.jpg"> Treasure Data
                 </h4>
 
             </div>
@@ -149,7 +149,7 @@
         <div class="row">
             <div class="col-md-4">
                 <h4>
-                   Send Grid
+                    <img src="{{ app.request.basepath }}/images/sendGrid_logo.jpg"> Send Grid
                 </h4>
 
             </div>
@@ -164,7 +164,7 @@
         <div class="row">
             <div class="col-md-4">
                 <h4>
-                   SAMI.io
+                    <img src="{{ app.request.basepath }}/images/sami_io_logo.jpg"> SAMI.io
                 </h4>
 
             </div>
@@ -178,7 +178,7 @@
         <div class="row">
             <div class="col-md-4">
                 <h4>
-                    Office 365
+                    <img src="{{ app.request.basepath }}/images/office_logo.jpg"> Office 365
                 </h4>
             </div>
             <div class="col-md-1">
