--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{{ app.request.basepath }}/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <link href="{{ app.request.basepath }}/css/microcms.css" rel="stylesheet">
+    <link href="{{ app.request.basepath }}/css/skyflow.css" rel="stylesheet">
 
     <title>Skyflow.io - {% block title %}{% endblock %}</title>
 </head>
