--- a/views/event-edit.html.twig
+++ b/views/event-edit.html.twig
@@ -24,7 +24,7 @@
         {{form_row(eventForm.description, {'label' : 'Description'}) }}
 
 
-        <input type="submit" name="submit" value="Update !" />
+        <input type="submit" name="submit" value="Save" />
         {{form_end(eventForm)}}
     </form>
 </div>
