--- a/views/flow-edit.html.twig
+++ b/views/flow-edit.html.twig
@@ -24,7 +24,7 @@
         {{ form_row(flowForm.documentation, {'label' : 'Documentation'}) }}
 
 
-        <input type="submit" name="submit" value="Update !" />
+        <input type="submit" name="submit" value="Save" />
         {{form_end(flowForm)}}
     </form>
 </div>
