--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -93,7 +93,7 @@
         <div class="row">
             <div class="col-md-4">
                 <h4>
-                    Wave
+                    <img src="{{ app.request.basepath }}/images/wave.png"> Wave
                 </h4>
 
             </div>
