--- a/views/events.html.twig
+++ b/views/events.html.twig
@@ -35,7 +35,7 @@
                                 {% for event in events %}
                                     <tr>
                                         <td><a href="/event/{{ event.id }}/edit">{{ event.ID}}</a></td>
-                                        <td>{{event.name}}</td>
+                                        <td><a href="/event/{{ event.id }}/edit">{{event.name}}</a></td>
                                         <td>{{event.description}}</td>
                                         <td><button type="button" class="btn btn-danger btn-xs" title="Delete" data-toggle="modal" data-target="#eventDialog{{ event.ID }}"><span class="glyphicon glyphicon-trash"></span></button>
 
