Fix bugs + add salesforce

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -125,7 +125,13 @@
             </div>
             <div class="col-md-1">
                 <h4>
-                    <a href="/">activate</a>
+                    <a href="/salesforce-credentials">setup</a>
+                </h4>
+
+            </div>
+            <div class="col-md-1">
+                <h4>
+                    <a href="/salesforce">helper</a>
                 </h4>
 
             </div>
