--- a/views/mapping.html.twig
+++ b/views/mapping.html.twig
@@ -64,7 +64,7 @@
                 </div>
 
             {% else %}
-                <div class="alert alert-warning">No associations found ! </div>
+                <div class="alert alert-warning">No mapping found ! </div>
             {% endif %}
         </div>
     </div>
