--- a/views/results.html.twig
+++ b/views/results.html.twig
@@ -6,11 +6,12 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Wave Helper Json
+                <h1 class="page-header">Salesforce / Wave Helper Json
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="/">Home</a></li>
                     <li><a href="/wave-helper">Wave API Helper</a></li>
+                    <li><a href="/salesforce">Salesforce API Helper</a></li>
                     <li class="active">Result Json</li>
                 </ol>
             </div>
