Add checkbox "Sandbox" to Salesforce credentials page

--- a/views/salesforce-credentials.html.twig
+++ b/views/salesforce-credentials.html.twig
@@ -24,6 +24,7 @@
             {{form_start(salesforceForm)}}
             {{form_row(salesforceForm.salesforceid, {'label' : 'Client ID'}) }}
             {{form_row(salesforceForm.salesforcesecret, {'label' : 'Client Secret'}) }}
+            {{form_row(salesforceForm.salesforcesandbox, {'label' : 'Sandbox'}) }}
 
             <input type="submit" name="submit" value="Add credentials !" />
             {{form_end(salesforceForm)}}
