Show stack trace on custom error template

--- a/views/error.html.twig
+++ b/views/error.html.twig
@@ -8,7 +8,11 @@
 	<img class="img-responsive pull-right" src="{{ app.request.basepath }}/images/404-ghost.png" alt="Error ghost"/>
     </div>
     <div class="col-xs-6">
-	<h1>Whoops...<br><small>{{ message }}</small></h1>
+	<h1>Whoops...<br><small>{{ exception.message }}</small></h1>
+    </div>
+
+    <div class="col-xs-12">
+      {{exception.traceAsString}}
     </div>
 </div>
 {% endblock %}
