--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -39,7 +39,7 @@
                                 <li><a href="{{ path('ET_credentials') }}">ExactTarget Setup</a></li>
                                 <li><a href="{{ path('et-helper') }}">ExactTarget API Helper</a></li>
                                 <li class="divider"></li>
-                                <li><a href="{{ path('wave_credentials')}}">Wave Setup</a></li>
+                                <li><a href="{{ path('wave-credentials') }}">Wave Setup</a></li>
                                 <li><a href="{{ path('wave-helper') }}">Wave API Helper</a></li>
                                 <li class="divider"></li>
                                 <li><a href="{{ path('logout') }}">Log out</a></li>
