--- a/views/wave-credentials-form.html.twig
+++ b/views/wave-credentials-form.html.twig
@@ -22,11 +22,9 @@
 
 		<form action="#" method="post">
 			{{form_start(waveForm)}}
-				{{form_row(waveForm.waveid, {'label' : 'Wave Client ID'}) }}
-				{{form_row(waveForm.wavesecret, {'label' : 'Wave Client Secret'}) }}
-				{{form_row(waveForm.wavelogin, {'label' : 'Login Salesforce'}) }}
-				{{form_row(waveForm.wavepassword, {'label' : 'Password Salesforce + Security Token'}) }}
-
+				{{form_row(waveForm.client_id, {'label' : 'Wave Client ID'}) }}
+				{{form_row(waveForm.client_secret, {'label' : 'Wave Client Secret'}) }}
+				{{form_row(waveForm.sandbox, {'label' : 'Sandbox'}) }}
 
 			 <input type="submit" name="submit" value="Add credentials !" />
 		   {{form_end(waveForm)}}
