Fix lost Wave helper link in index page

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -105,7 +105,7 @@
             </div>
             <div class="col-md-1">
                 <h4>
-                    <a href="{{ path('wave-helper') }}>helper</a>
+                    <a href="{{ path('wave-helper') }}">helper</a>
                 </h4>
 
             </div>
