Save point: working salesforce authentication form

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -125,7 +125,7 @@
             </div>
             <div class="col-md-1">
                 <h4>
-                    <a href="/salesforce-credentials">setup</a>
+                    <a href="{{ path('salesforce-credentials') }}">setup</a>
                 </h4>
 
             </div>
