Save point: salesforce helper is shown but returns 401 Unauthorized

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -131,7 +131,7 @@
             </div>
             <div class="col-md-1">
                 <h4>
-                    <a href="/salesforce">helper</a>
+                    <a href="{{ path('salesforce-helper') }}">helper</a>
                 </h4>
 
             </div>
