--- a/views/wave-credentials.html.twig
+++ b/views/wave-credentials.html.twig
@@ -3,14 +3,31 @@
 {% block title %}Add Wave credentials{% endblock %}
 
 {% block content %}
+<div class="container">
+	<div class="row">
+		<div class="col-lg-12">
+			<h1 class="page-header">Add Wave Credentials
+			</h1>
+			<ol class="breadcrumb">
+				<li><a href="/">Home</a></li>
+				<li class="active">Add Wave Credentials</li>
+			</ol>
+		</div>
+	</div>
+		{% for flashMessage in app.session.flashbag.get('success') %}
+		<div class="alert alert-success">
+			{{ flashMessage }}
+		</div>
+		{% endfor %}
 
-<form action="#" method="post">
-	{{form_start(etForm)}}
-		{{form_row(etForm.clientid, {'label' : 'Client ID'}) }}
-		{{form_row(etForm.clientsecret, {'label' : 'Client Secret'}) }}
+		<form action="#" method="post">
+			{{form_start(waveCredentialsForm)}}
+				{{form_row(waveCredentialsForm.client_id, {'label' : 'Wave Client ID'}) }}
+				{{form_row(waveCredentialsForm.client_secret, {'label' : 'Wave Client Secret'}) }}
+				{{form_row(waveCredentialsForm.is_sandbox, {'label' : 'Sandbox'}) }}
 
-
-	 <input type="submit" name="submit" value="Add credentials !" />
-   {{form_end(etForm)}}
-</form>
+			 <input type="submit" name="submit" value="Add credentials !" />
+		   {{form_end(waveCredentialsForm)}}
+		</form>
+</div>
 {% endblock %}
