Save point: working salesforce/wave credentials/helpers, working event/flow/mapping creation
I have broken the Wave query history because i need to refactor the Wave query history to also have this functionality for Salesforce queries. It is a work in progress.

--- a/views/salesforce-apihelper.html.twig
+++ b/views/salesforce-apihelper.html.twig
@@ -14,12 +14,10 @@
                 </ol>
             </div>
         </div>
-        {{ form_start(requestForm,  { 'attr': {'class': 'form-horizontal'} })}}
-        {{ form_row(requestForm.Request, {'label': 'Request'}) }}
+        {{ form_start(queryForm,  { 'attr': {'class': 'form-horizontal'} })}}
+        {{ form_row(queryForm.Request, {'label': 'Request'}) }}
         <input type="submit" name="submit" id="submit" value="Send Request ! "/>
-        {{ form_end(requestForm) }}
-
-
+        {{ form_end(queryForm) }}
     </div>
 
 {% endblock %}
