--- a/views/wave/setup/credentials-form.html.twig
+++ b/views/wave/setup/credentials-form.html.twig
@@ -21,13 +21,13 @@
 		{% endfor %}
 
 		<form action="#" method="post">
-			{{form_start(waveCredentialsForm)}}
-				{{form_row(waveCredentialsForm.client_id, {'label' : 'Wave Client ID'}) }}
-				{{form_row(waveCredentialsForm.client_secret, {'label' : 'Wave Client Secret'}) }}
-				{{form_row(waveCredentialsForm.is_sandbox, {'label' : 'Sandbox'}) }}
+			{{form_start(credentialsForm)}}
+				{{form_row(credentialsForm.client_id, {'label' : 'Wave Client ID'}) }}
+				{{form_row(credentialsForm.client_secret, {'label' : 'Wave Client Secret'}) }}
+				{{form_row(credentialsForm.is_sandbox, {'label' : 'Sandbox'}) }}
 
 			 <input type="submit" name="submit" value="Add credentials !" />
-		   {{form_end(waveCredentialsForm)}}
+		   {{form_end(credentialsForm)}}
 		</form>
 </div>
 {% endblock %}
