--- a/views/salesforce/setup/credentials-form.html.twig
+++ b/views/salesforce/setup/credentials-form.html.twig
@@ -21,13 +21,13 @@
         {% endfor %}
 
         <form action="#" method="post">
-            {{form_start(salesforceCredentialsForm)}}
-            {{form_row(salesforceCredentialsForm.client_id, {'label' : 'Client ID'}) }}
-            {{form_row(salesforceCredentialsForm.client_secret, {'label' : 'Client Secret'}) }}
-            {{form_row(salesforceCredentialsForm.is_sandbox, {'label' : 'Sandbox'}) }}
+            {{form_start(credentialsForm)}}
+            {{form_row(credentialsForm.client_id, {'label' : 'Client ID'}) }}
+            {{form_row(credentialsForm.client_secret, {'label' : 'Client Secret'}) }}
+            {{form_row(credentialsForm.is_sandbox, {'label' : 'Sandbox'}) }}
 
             <input type="submit" name="submit" value="Add credentials !" />
-            {{form_end(salesforceCredentialsForm)}}
+            {{form_end(credentialsForm)}}
         </form>
     </div>
 {% endblock %}
