--- a/views/wave/helper/query-results.html.twig
+++ b/views/wave/helper/query-results.html.twig
@@ -1,16 +1,16 @@
 {% extends "layout.html.twig" %}
 
-{% block title %}Salesforce Helper Json{% endblock %}
+{% block title %}Wave Helper Json{% endblock %}
 
 {% block content %}
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Salesforce Helper Json
+                <h1 class="page-header">Wave Helper Json
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="/">Home</a></li>
-                    <li><a href="{{ path('salesforce-helper') }}">Salesforce API Helper</a></li>
+                    <li><a href="{{ path('wave-helper') }}">Wave API Helper</a></li>
                     <li class="active">Result Json</li>
                 </ol>
             </div>
