- add Documentation Link

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -43,7 +43,7 @@
             </div>
             <div class="col-md-6">
                 <h4>
-                    <a href="/"><img src="{{ app.request.basepath }}/images/documentation.png"> Documentation</a>
+                    <a target="_blank" href="https://github.com/Sylpheo/skyflow.io/wiki" onclick=""><img src="{{ app.request.basepath }}/images/documentation.png"> Documentation</a>
                 </h4>
 
             </div>
@@ -82,7 +82,7 @@
             </div>
             <div class="col-md-1">
                 <h4>
-                    <a href="/">documentation</a>
+                    <a target="_blank" href="https://github.com/Sylpheo/skyflow.io/wiki/ExactTarget-Addon">documentation</a>
                 </h4>
 
             </div>
@@ -111,7 +111,7 @@
             </div>
             <div class="col-md-1">
                 <h4>
-                    <a href="/">documentation</a>
+                    <a target="_blank" href="https://github.com/Sylpheo/skyflow.io/wiki/Wave-Addon">documentation</a>
                 </h4>
             </div>
         </div>
@@ -133,7 +133,11 @@
                 <h4>
                     <a href="{{ path('salesforce-helper') }}">helper</a>
                 </h4>
-
+            </div>
+            <div class="col-md-1">
+                <h4>
+                    <a target="_blank" href="https://github.com/Sylpheo/skyflow.io/wiki/Salesforce-Addon">documentation</a>
+                </h4>
             </div>
         </div>
 
