Add "Need help ?" links to Salesforce, Wave setup pages

--- a/views/salesforce/setup/credentials-form.html.twig
+++ b/views/salesforce/setup/credentials-form.html.twig
@@ -27,6 +27,7 @@
             {{form_row(credentialsForm.is_sandbox, {'label' : 'Sandbox'}) }}
 
             <input type="submit" name="submit" value="Add credentials !" />
+            <a href="https://help.salesforce.com/apex/HTViewHelpDoc?id=connected_app_create.htm&language=en_US" target="_blank">Need help ?</a>
             {{form_end(credentialsForm)}}
         </form>
     </div>
