--- a/views/et-credentials-form.html.twig
+++ b/views/et-credentials-form.html.twig
@@ -25,8 +25,8 @@
 				{{form_row(etForm.clientid, {'label' : 'Client ID'}) }}
 				{{form_row(etForm.clientsecret, {'label' : 'Client Secret'}) }}
 
-
 			 <input type="submit" name="submit" value="Add credentials !" />
+			 <a href="https://code.exacttarget.com/apis-sdks/rest-api/using-app-center-to-get-an-api-key.html" target="_blank">Need help ?</a>
 		   {{form_end(etForm)}}
 		</form>
 </div>
