--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -37,7 +37,7 @@
         <div class="row">
             <div class="col-md-6">
                 <h4>
-                    <a href="/"><img src="{{ app.request.basepath }}/images/metrics.png"> Metrics</a>
+                    <a target="_blank" href="https://dashboard.heroku.com/apps/{{ app.application_name }}/metrics/web"><img src="{{ app.request.basepath }}/images/metrics.png"> Metrics</a>
                 </h4>
 
             </div>
