Change helper query-form label from "Request" to "Query"

--- a/views/skyflow/helper/query-form.html.twig
+++ b/views/skyflow/helper/query-form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(queryForm, {'attr': {'class': 'form-horizontal'}}) }}
-{{ form_row(queryForm.Request, {'label': 'Request'}) }}
+{{ form_row(queryForm.Request, {'label': 'Query'}) }}
 <input type="submit" name="submit" id="submit" value="Send Request ! "/>
 {{ form_end(queryForm) }}
