--- a/views/skyflow/helper/query-results.html.twig
+++ b/views/skyflow/helper/query-results.html.twig
@@ -1,8 +1,8 @@
 <div class="panel panel-default">
     <div class="panel-heading">Result Json</div>
     <div class="panel-body">
-        <pre>
+        <pre><code>
 {{ results }}
-        </pre>
+        </code></pre>
     </div>
 </div>
